--- a/02 Data Preprocessing.ipynb
+++ b/02 Data Preprocessing.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'def list_csv_files(directory):\\n    csv_files = []\\n    for filename in os.listdir(directory):\\n        if filename.endswith(\".csv\"):\\n            csv_files.append(filename)\\n    return csv_files\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from tqdm.notebook import tqdm\n",
@@ -28,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,22 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataPreprocessing():\n",
-    "    def __init__(self, directory, train_size=.9, do_train_test_split = True):\n",
+    "    def __init__(self, directory, independent_signals, dependent_signals, sequence_length, train_size=.9, do_train_test_split = True):\n",
     "        \n",
     "      self.directory = directory\n",
     "      self.do_train_test_split = do_train_test_split\n",
     "      self.list_of_path = DataPreprocessing.list_csv_files(directory)\n",
     "      self.train_size = train_size\n",
+    "      self.independent_signals = independent_signals\n",
+    "      self.dependent_signals = dependent_signals\n",
+    "      self.sequence_length = sequence_length\n",
+    "\n",
     "      self.train_df_batch = []\n",
     "      self.test_df_batch = []\n",
     "      self.dataset_batch = []\n",
     "      self.train_sequences = []\n",
     "      self.test_sequences = []\n",
+    "\n",
     "      self.scaler = MinMaxScaler(feature_range=(-1,1))\n",
     "    \n",
     "    @staticmethod\n",
@@ -89,53 +83,92 @@
     "    \n",
     "    def data_loader(self, file_path):\n",
     "\n",
-    "      path = '{}{}'.format(self.directory, file_path)\n",
+    "      path = '{}{}'.format(self.directory, file_path) \n",
     "      print(path)\n",
     "      dataset = pd.read_csv(path)\n",
     "      dataset.timestamp = pd.to_datetime(dataset.timestamp)\n",
     "      dataset = dataset.set_index('timestamp')\n",
     "      return dataset\n",
+    "    \n",
     "\n",
-    "    def fit(self): \n",
+    "    @staticmethod\n",
+    "    def load_data_from_a_specific_path(file_path):\n",
+    "      dataset = pd.read_csv(file_path)\n",
+    "      dataset.timestamp = pd.to_datetime(dataset.timestamp)\n",
+    "      dataset = dataset.set_index('timestamp')\n",
+    "      return dataset\n",
+    "    \n",
+    "\n",
+    "    def fit_transform(self):  \n",
     "      for each_file_path in self.list_of_path:\n",
     "        # Loading data from each file\n",
     "        dataset = self.data_loader(each_file_path)\n",
     "\n",
     "        # Calculate min and max value of all features this will be used for scaling\n",
     "        self.dataset_batch.append(dataset)\n",
-    "        if self.do_train_test_split:\n",
-    "          train_df, test_df = DataPreprocessing.split_dataset(dataset, self.train_size)\n",
-    "          self.train_df_batch.append(train_df)\n",
-    "          self.test_df_batch.append(test_df)\n",
+    "        \n",
+    "        train_df, test_df = DataPreprocessing.split_dataset(dataset, self.train_size)\n",
+    "        self.train_df_batch.append(train_df)\n",
+    "        self.test_df_batch.append(test_df)\n",
     "\n",
     "      # Scaling\n",
     "      self.scaling_fit()\n",
-    "\n",
+    "      \n",
     "      # Scaling transform\n",
     "      for batch_idx in range(len(self.train_df_batch)):\n",
     "        self.train_df_batch[batch_idx] = (self.scaling_transform(self.train_df_batch[batch_idx]))\n",
     "        self.test_df_batch[batch_idx] = self.scaling_transform(self.test_df_batch[batch_idx])\n",
     "\n",
-    "    def create_sequences_for_a_batch(input_data, target_colums, sequence_length): \n",
     "\n",
-    "      sequences = []\n",
+    "      # For train data\n",
+    "      self.create_sequences(self.sequence_length)\n",
+    "      # For test data\n",
+    "      self.create_sequences(self.sequence_length, get_sequences_for_train = False)\n",
+    "\n",
+    "    def transform(self, path):\n",
+    "        dataset = DataPreprocessing.load_data_from_a_specific_path(path)\n",
+    "        self.datset_sequences = []\n",
+    "        scaled_dataset = (self.scaling_transform(dataset))\n",
+    "        self.create_sequences_for_a_batch(scaled_dataset, self.sequence_length, None)\n",
+    "        return self.datset_sequences\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "    def create_sequences_for_a_batch(self, input_data, sequence_length, get_sequences_for_train):\n",
+    "\n",
     "      data_size = len(input_data)\n",
     "\n",
     "      for i in range(data_size - sequence_length):\n",
-    "        sequence = input_data[i: i+sequence_length]\n",
     "\n",
-    "        label = input_data[i: i + sequence_length][target_colums]\n",
+    "        sequence = input_data[i: i+sequence_length][self.independent_signals]\n",
     "\n",
-    "        sequences.append((sequence, label))\n",
+    "        if get_sequences_for_train: \n",
+    "          label = input_data[i: i + sequence_length][self.dependent_signals]\n",
+    "          self.train_sequences.append((sequence, label))\n",
     "\n",
-    "  \n",
+    "        elif get_sequences_for_train ==None:\n",
+    "          self.datset_sequences.append((sequence, None)) \n",
+    "\n",
+    "        else:\n",
+    "          label = input_data[i: i + sequence_length][self.dependent_signals]\n",
+    "          self.test_sequences.append((sequence,label))  \n",
     "\n",
     "\n",
+    "    def create_sequences(self, sequence_length, get_sequences_for_train=True):\n",
+    "\n",
+    "      if get_sequences_for_train:\n",
+    "\n",
+    "        for each_batch in self.train_df_batch:\n",
+    "          self.create_sequences_for_a_batch(each_batch, sequence_length, get_sequences_for_train)\n",
+    "\n",
+    "      else:\n",
+    "\n",
+    "        for each_batch in self.test_df_batch:\n",
+    "          self.create_sequences_for_a_batch(each_batch, sequence_length, get_sequences_for_train)  \n",
+    "        \n",
     "\n",
     "    # Getter method\n",
-    "    @property\n",
-    "    def get_dataset(self):\n",
-    "      return self.dataset   \n",
     "\n",
     "    @property\n",
     "    def get_train_df(self):\n",
@@ -145,25 +178,29 @@
     "    def get_test_df(self):\n",
     "      return self.test_df_batch \n",
     "    \n",
-    "\n",
-    "      \n",
-    "     # TODO create sequence method\n",
+    "    @property\n",
+    "    def get_sequences_train(self):\n",
+    "      return self.train_sequences\n",
+    "    \n",
+    "    @property\n",
+    "    def get_sequences_test(self):\n",
+    "      return self.test_sequences\n",
     "      \n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obj1 = DataPreprocessing('datasets/')"
+    "obj1 = DataPreprocessing('datasets/', independent_signals, dependent_signals, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -177,15 +214,8 @@
     }
    ],
    "source": [
-    "obj1.fit()"
+    "obj1.fit_transform()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
