--- a/02 Data Preprocessing.ipynb
+++ b/02 Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,29 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "import torch\n",
+    "import torch.autograd as autograd\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "\n",
     "tqdm.pandas() \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +89,14 @@
     "          csv_files.append(filename)\n",
     "      return csv_files    \n",
     "    \n",
+    "    @staticmethod\n",
+    "    def load_data_from_a_specific_path(file_path):\n",
+    "      dataset = pd.read_csv(file_path)\n",
+    "      dataset.timestamp = pd.to_datetime(dataset.timestamp)\n",
+    "      dataset = dataset.set_index('timestamp')\n",
+    "      return dataset\n",
+    "    \n",
+    "    \n",
     "    def scaling_fit(self):\n",
     "      self.scaler.fit(pd.concat(self.train_df_batch))\n",
     "\n",
@@ -90,15 +114,6 @@
     "      dataset = dataset.set_index('timestamp')\n",
     "      return dataset\n",
     "    \n",
-    "\n",
-    "    @staticmethod\n",
-    "    def load_data_from_a_specific_path(file_path):\n",
-    "      dataset = pd.read_csv(file_path)\n",
-    "      dataset.timestamp = pd.to_datetime(dataset.timestamp)\n",
-    "      dataset = dataset.set_index('timestamp')\n",
-    "      return dataset\n",
-    "    \n",
-    "\n",
     "    def fit_transform(self):  \n",
     "      for each_file_path in self.list_of_path:\n",
     "        # Loading data from each file\n",
@@ -125,14 +140,13 @@
     "      # For test data\n",
     "      self.create_sequences(self.sequence_length, get_sequences_for_train = False)\n",
     "\n",
+    "\n",
     "    def transform(self, path):\n",
     "        dataset = DataPreprocessing.load_data_from_a_specific_path(path)\n",
     "        self.datset_sequences = []\n",
     "        scaled_dataset = (self.scaling_transform(dataset))\n",
     "        self.create_sequences_for_a_batch(scaled_dataset, self.sequence_length, None)\n",
     "        return self.datset_sequences\n",
-    "        \n",
-    "\n",
     "\n",
     "\n",
     "    def create_sequences_for_a_batch(self, input_data, sequence_length, get_sequences_for_train):\n",
@@ -169,7 +183,6 @@
     "        \n",
     "\n",
     "    # Getter method\n",
-    "\n",
     "    @property\n",
     "    def get_train_df(self):\n",
     "      return self.train_df_batch\n",
@@ -184,23 +197,69 @@
     "    \n",
     "    @property\n",
     "    def get_sequences_test(self):\n",
-    "      return self.test_sequences\n",
-    "      \n",
-    "      "
+    "      return self.test_sequences  \n",
+    "    \n",
+    "\n",
+    "\n",
+    "class TorchDataset(Dataset):\n",
+    "\n",
+    "  def __init__(self, sequences):\n",
+    "    #super().__init__()\n",
+    "    self.sequences = sequences\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return len(self.sequences)\n",
+    "  \n",
+    "  def __getitme__(self, idx):\n",
+    "    sequence, label = self.sequences[idx]\n",
+    "    \n",
+    "    return dict(\n",
+    "      sequence= torch.Tensor(sequence.to_numpy()),\n",
+    "      label = torch.Tensor(label)\n",
+    "    )\n",
+    "  \n",
+    "\n",
+    "class TorchDataModule(pl.LightningDataModule):\n",
+    "\n",
+    "  def __init__(self, train_sequences, test_sequences, batch_size = 10):\n",
+    "\n",
+    "    super().__init__()\n",
+    "    self.train_sequences = train_sequences\n",
+    "    self.test_sequences = test_sequences\n",
+    "    self.batch_size = batch_size\n",
+    "\n",
+    "  def setup(self):\n",
+    "    self.train_datset = TorchDataset(self.train_sequences )  \n",
+    "    self.test_datset = TorchDataset(self.test_sequences)  \n",
+    "\n",
+    "  def train_dataloader(self):\n",
+    "    return DataLoader(\n",
+    "      self.train_datset,\n",
+    "      batch_size = self.batch_size,\n",
+    "      shuffle = False,\n",
+    "      num_workers = 4\n",
+    "    )  \n",
+    "  \n",
+    "  def val_dataloader(self):   # TODO make seprate data for validation\n",
+    "    return DataLoader(\n",
+    "      self.test_datset,\n",
+    "      batch_size = 1,\n",
+    "      shuffle = False,\n",
+    "      num_workers = 1\n",
+    "    )  \n",
+    "  \n",
+    "  def test_dataloader(self):\n",
+    "    return DataLoader(\n",
+    "      self.test_datset,\n",
+    "      batch_size = 1,\n",
+    "      shuffle = False,\n",
+    "      num_workers = 1\n",
+    "    )  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obj1 = DataPreprocessing('datasets/', independent_signals, dependent_signals, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +273,32 @@
     }
    ],
    "source": [
-    "obj1.fit_transform()"
+    "data_prep = DataPreprocessing('datasets/', independent_signals, dependent_signals, 10)\n",
+    "data_prep.fit_transform()\n",
+    "\n",
+    "train_sequence = data_prep.get_sequences_train\n",
+    "test_sequence = data_prep.get_sequences_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_EPOCHS = 100\n",
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "data_module = TorchDataModule(train_sequence, test_sequence, batch_size = BATCH_SIZE)\n",
+    "data_module.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
